force-app/main/default/objects/QuoteLineItem/fields/T_QuoteCAPA__c.field-meta.xml
<CustomField>
    <fullName>T_QuoteCAPA__c</fullName>
    <formula>TEXT(Quote.CAPA__c)</formula>
    <label>T_QuoteCAPA</label>
    <type>Text</type>
</CustomField>