force-app/main/default/objects/QuoteLineItem/fields/T_QuoteCEE__c.field-meta.xml
<CustomField>
    <fullName>T_QuoteCEE__c</fullName>
    <description>Récupération CEE de la quote parent pour la LWC</description>
    <formula>TEXT(Quote.CEE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_QuoteCEE</label>
    <type>Text</type>
</CustomField>