force-app/main/default/objects/QuoteLineItem/fields/T_QuoteFraisDistributionVariable__c.field-meta.xml
<CustomField>
    <fullName>T_QuoteFraisDistributionVariable__c</fullName>
    <formula>TEXT(Quote.Frais_Distribution_Variable__c)</formula>
    <label>T_QuoteFraisDistributionVariable</label>
    <type>Text</type>
</CustomField>