force-app/main/default/objects/QuoteLineItem/fields/T_QuoteTURPE__c.field-meta.xml
<CustomField>
    <fullName>T_QuoteTURPE__c</fullName>
    <formula>TEXT(Quote.TURPE__c)</formula>
    <label>T_QuoteTURPE</label>
    <type>Text</type>
</CustomField>