force-app/main/default/objects/QuoteLineItem/fields/TaxeCTAOptimal__c.field-meta.xml
<CustomField>
    <fullName>TaxeCTAOptimal__c</fullName>
    <label>Taxe CTA Optimal (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>