force-app/main/default/objects/QuoteLineItem/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Taxes</label>
    <type>Checkbox</type>
</CustomField>