force-app/main/default/objects/QuoteLineItem/fields/TCCFE__c.field-meta.xml
<CustomField>
    <fullName>TCCFE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TCCFE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>