force-app/main/default/objects/QuoteLineItem/fields/TDCFE__c.field-meta.xml
<CustomField>
    <fullName>TDCFE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDCFE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>