force-app/main/default/objects/QuoteLineItem/fields/TECH_Budget__c.field-meta.xml
<CustomField>
    <fullName>TECH_Budget__c</fullName>
    <label>Budget HTVA</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>