force-app/main/default/objects/QuoteLineItem/fields/TECH_BudgetGaz__c.field-meta.xml
<CustomField>
    <fullName>TECH_BudgetGaz__c</fullName>
    <label>TECH_BudgetGaz</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>