force-app/main/default/objects/QuoteLineItem/fields/TECH_CalendrierFournisseur__c.field-meta.xml
<CustomField>
    <fullName>TECH_CalendrierFournisseur__c</fullName>
    <label>TECH_CalendrierFournisseur</label>
    <length>10</length>
    <type>Text</type>
</CustomField>