force-app/main/default/objects/QuoteLineItem/fields/TECH_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>TECH_fournisseur__c</fullName>
    <formula>Quote.Fournisseur__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fournisseur</label>
    <type>Text</type>
</CustomField>