force-app/main/default/objects/QuoteLineItem/fields/TECH_FTA__c.field-meta.xml
<CustomField>
    <fullName>TECH_FTA__c</fullName>
    <formula>TEXT(PDE__r.FTA__c)</formula>
    <label>TECH_FTA</label>
    <type>Text</type>
</CustomField>