force-app/main/default/objects/QuoteLineItem/fields/TECH_IdentifiantPDE__c.field-meta.xml
<CustomField>
    <fullName>TECH_IdentifiantPDE__c</fullName>
    <formula>IF(ISBLANK( PCE__c ), IF(ISBLANK(TECH_PdeReference__c),&apos;&apos;,TECH_PdeReference__c), PCE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifiant PDE</label>
    <type>Text</type>
</CustomField>