force-app/main/default/objects/QuoteLineItem/fields/TECH_nom_site__c.field-meta.xml
<CustomField>
    <fullName>TECH_nom_site__c</fullName>
    <formula>PDE__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH nom du site</label>
    <type>Text</type>
</CustomField>