force-app/main/default/objects/QuoteLineItem/fields/TECH_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>TECH_OpportunityId__c</fullName>
    <formula>CASESAFEID(Quote.Opportunity.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_OpportunityId</label>
    <type>Text</type>
</CustomField>