force-app/main/default/objects/QuoteLineItem/fields/TECH_PdeReference__c.field-meta.xml
<CustomField>
    <fullName>TECH_PdeReference__c</fullName>
    <formula>PDE__r.TECH_num_compteur__c</formula>
    <label>Numéro de compteur</label>
    <type>Text</type>
</CustomField>