force-app/main/default/objects/QuoteLineItem/fields/TECH_Profil__c.field-meta.xml
<CustomField>
    <fullName>TECH_Profil__c</fullName>
    <formula>TEXT(PDE__r.Profil__c)</formula>
    <label>TECH_Profil</label>
    <type>Text</type>
</CustomField>