force-app/main/default/objects/QuoteLineItem/fields/TECH_RT__c.field-meta.xml
<CustomField>
    <fullName>TECH_RT__c</fullName>
    <formula>PDE__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_RT</label>
    <type>Text</type>
</CustomField>