force-app/main/default/objects/QuoteLineItem/fields/TECH_Segment__c.field-meta.xml
<CustomField>
    <fullName>TECH_Segment__c</fullName>
    <formula>TEXT(PDE__r.Segment__c)</formula>
    <label>TECH_Segment</label>
    <type>Text</type>
</CustomField>