force-app/main/default/objects/QuoteLineItem/fields/TECH_Siret_Payeur__c.field-meta.xml
<CustomField>
    <fullName>TECH_Siret_Payeur__c</fullName>
    <formula>PDE__r.Siret_payeur__c</formula>
    <label>Siret Payeur</label>
    <type>Text</type>
</CustomField>