force-app/main/default/objects/QuoteLineItem/fields/TECH_Tarif__c.field-meta.xml
<CustomField>
    <fullName>TECH_Tarif__c</fullName>
    <formula>TEXT(PDE__r.Tarif__c)</formula>
    <label>TECH_Tarif</label>
    <type>Text</type>
</CustomField>