force-app/main/default/objects/QuoteLineItem/fields/TECH_TCFE__c.field-meta.xml
<CustomField>
    <fullName>TECH_TCFE__c</fullName>
    <formula>TCCFE__c +  TDCFE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_TCFE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>