force-app/main/default/objects/QuoteLineItem/fields/TECH_TypeOffre__c.field-meta.xml
<CustomField>
    <fullName>TECH_TypeOffre__c</fullName>
    <formula>TEXT( Quote.TypeOffre__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;offre</label>
    <type>Text</type>
</CustomField>