force-app/main/default/objects/QuoteLineItem/fields/TECH_TypePDL__c.field-meta.xml
<CustomField>
    <fullName>TECH_TypePDL__c</fullName>
    <formula>PDE__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_TypePDL</label>
    <type>Text</type>
</CustomField>