force-app/main/default/objects/QuoteLineItem/fields/TICGN__c.field-meta.xml
<CustomField>
    <fullName>TICGN__c</fullName>
    <defaultValue>$CustomMetadata.Valeur_Annuelle__mdt.Valeur.TICGN__c</defaultValue>
    <label>TICGN (€/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>