force-app/main/default/objects/QuoteLineItem/fields/TURPE_Fixe__c.field-meta.xml
<CustomField>
    <fullName>TURPE_Fixe__c</fullName>
    <label>TURPE Fixe</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>