force-app/main/default/objects/QuoteLineItem/fields/TURPE_Variable__c.field-meta.xml
<CustomField>
    <fullName>TURPE_Variable__c</fullName>
    <label>TURPE Variable</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>