force-app/main/default/objects/QuoteLineItem/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <label>TVA</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>