force-app/main/default/objects/QuoteLineItem/fields/Voir_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Voir_Opportunite__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Quote.Opportunity.Id,Quote.Opportunity.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunité</label>
    <type>Text</type>
</CustomField>