force-app/main/default/objects/QuoteLineItem/validationRules/VR001_CU.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_CU</fullName>
    <active>false</active>
    <errorConditionFormula>AND(CONTAINS(TEXT(PDE__r.FTA__c),&quot;CU&quot;),
OR( NOT(ISBLANK(TEXT(ConsoHC__c))),NOT(ISBLANK(TEXT(ConsoHP__c)))
)
)</errorConditionFormula>
    <errorMessage>Le  FTA  associé à ce point d&apos;énergie ne permet pas de remplir les champs HP ou HC</errorMessage>
</ValidationRule>