force-app/main/default/objects/QuoteLineItem/validationRules/VR002_MU.validationRule-meta.xml
<ValidationRule>
    <fullName>VR002_MU</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
CONTAINS(TEXT(PDE__r.FTA__c),&apos;MU&apos;),
NOT(ISBLANK(TEXT(Conso_Base__c)))
)</errorConditionFormula>
    <errorMessage>Le FTA associé au Point d&apos;énergie ne permet pas de remplir ce champ</errorMessage>
</ValidationRule>